@@ -13,7 +13,7 @@
 package org.openhab.binding.warmup.internal.handler;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
@@ -70,7 +70,7 @@ public class MyWarmupAccountHandler extends BaseBridgeHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(WarmupDiscoveryService.class);
+        return Set.of(WarmupDiscoveryService.class);
     }
 
     @Override
